microsoft-365-ops/2.2/modules/ROOT/pages/microsoft-365-ops-connector-reference.adoc
= Microsoft Dynamics 365 For Operations Connector 2.2 Reference - Mule 4
:page-aliases: connectors::microsoft/microsoft-365-ops-connector-reference.adoc

Support Category: https://www.mulesoft.com/legal/versioning-back-support-policy#anypoint-connectors[Select]

Anypoint Connector for Microsoft Dynamics 365 for Finance and Operations (Microsoft Dynamics 365 for Operations Connector) enables integration with Microsoft Dynamics 365 for Operations Web API.

== Configurations
---
[[dynamics-365-for-operations]]
=== Microsoft Dynamics 365 For Operations

==== Parameters

[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
|Name | String | The name for this configuration. Connectors reference the configuration with this name. | | x
| Connection a| * <<dynamics-365-for-operations_oauth2, OAuth2>>
* <<dynamics-365-for-operations_oauth2-user-password, OAuth Username Password (Deprecated)>>
 | The connection types to provide to this configuration. | | x
| Expiration Policy a| <<ExpirationPolicy>> |  Configures the minimum amount of time that a dynamic configuration instance can remain idle before Mule considers it eligible for expiration. This does not mean that the instance expires at the exact moment that it becomes eligible. Mule purges the instances as appropriate. |  |
|===

== Connection Types

[[dynamics-365-for-operations_oauth2]]
=== OAuth 2.0

====== Parameters

[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Scope a| String | OpenID Connect scope  |  openid |
| Resource a| String | OAuth endpoint URL |  | x
| Response Type a| String |Tells the authorization server what parameters to return from the authorization endpoint  |  query |
| TLS configuration a| <<Tls>> |  Defines a configuration for TLS, which can be used from both the client and server sides to secure communication for the Mule app. When using the HTTPS protocol, the HTTP communication is secured using TLS or SSL. If HTTPS is configured as the protocol then the user needs to configure at least the keystore in the `tls:context` child element of the `listener-config`. |  | 
| Read Timeout a| Number |  Specifies the amount of time in milliseconds that the consumer waits for a response before it times out. Default value is 0, which means infinite. |  0 |
| Connection Timeout a| Number |  Specifies the amount of time in milliseconds that the consumer attempts to establish a connection before it times out. Default value is 0, which means infinite. |  0 |
| Time unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit to use for the Connection Timeout and Read Timeout parameters |  `MILLISECONDS` | 
| Host a| String |  Hostname of the proxy. If this property is not set, then no proxy is used; otherwise a proxy is used, but a proxy host must be specified. |  |
| Port a| Number |  Port of the proxy. If `Host` is set, this property must be set and cannot be a negative number. |  |
| Username a| String |  Username used to authenticate against the proxy. If this property is not set, then no authentication is used against the proxy; otherwise this value must be specified. |  |
| Password a| String |  Password used to authenticate against the proxy. |  |
| Reconnection a| <<Reconnection>> |  When the app is deployed, a connectivity test is performed on all connectors. If set to `true`, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
| Consumer Key a| String |  The OAuth consumer key as registered with the service provider. |  | x
| Consumer Secret a| String |  The OAuth consumer secret as registered with the service provider. |  | x
| Authorization Url a| String |  The service provider's authorization endpoint URL. |  `+https://login.microsoftonline.com/{tenant}/oauth2/authorize+` |
| Access Token Url a| String |  The service provider's access token endpoint URL. |  `+https://login.microsoftonline.com/{tenant}/oauth2/token+` |
| Scopes a| String |  The OAuth scopes to request during the OAuth dance. If not provided, it defaults to the scopes provided in the annotation. |  |
| Resource Owner Id a| String |  The Resource Owner ID that each component should use if it doesn't otherwise provide a reference. |  |
| Before a| String |  The name of a flow to execute before starting the OAuth dance. |  |
| After a| String |  The name of a flow to execute immediately after an access token is received. |  |
| Listener Config a| String |  A reference to a <http:listener-config /> to use to create the listener for the access token callback endpoint. |  | x
| Callback Path a| String |  The path of the access token callback endpoint. |  | x
| Authorize Path a| String |  The path of the local HTTP endpoint that triggers the OAuth dance. |  | x
| External Callback Url a| String |  If the callback endpoint is behind a proxy or accessible through a non direct URL, use this parameter to tell the OAuth provider the URL to use to access the callback. |  |
| Object Store a| String |  A reference to the object store to use to store each resource owner ID's data. If not specified, Mule automatically provisions the default object store. |  |
|===

[[dynamics-365-for-operations_oauth2-user-password]]
===== OAuth Username Password (Deprecated)

====== Parameters

[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Username a| String |  Username used to initialize the session. |  | x
| Password a| String |  Password used to authenticate the user. |  | x
| Resource a| String |  The Application ID URI of the web API (secured resource). |  | x
| Client Id a| String |  The Application ID assigned to your app when you registered it with Azure AD. You can find this in the Azure Portal. Click *Active Directory*, click the directory, choose the app, and click *Configure*. |  | x
| Client Secret a| String |  The Application Secret that you created in the app registration portal for your app. It should not be used in a native app, because client_secrets cannot be reliably stored on devices. It is required for web apps and web APIs, which have the ability to store the client_secret securely on the server side. |  | x
| Token Request Endpoint a| String |  |  | x
| Reconnection a| <<Reconnection>> |  When the app is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
| Read Timeout a| Number |  Specifies the amount of time in milliseconds that the consumer waits for a response before it times out. Default value is 0, which means infinite. |  0 |
| Connection Timeout a| Number |  Specifies the amount of time in milliseconds that the consumer attempts to establish a connection before it times out. Default value is 0, which means infinite. |  0 |
| Host a| String |  Hostname of the proxy. If this property is not set, then no proxy is used; otherwise a proxy is used, but a proxy host must be specified. |  |
| Port a| Number |  Port of the proxy. If host is set then this property must be set and cannot be a negative number. |  |
| Username a| String |  Username used to authenticate against the proxy. If this property is not set, then no authentication is used against the proxy; otherwise this value must be specified. |  |
| Password a| String |  Password used to authenticate against the proxy. |  |
|===

== Operations

* <<executeOperation>>
* <<importDataRecurringJob>>
* <<retrieveMultiple>>
* <<retrieveMultipleByQuery>>
* <<unauthorize>>

[[executeOperation]]
=== Execute Operation

`<dynamics365ForOperations:execute-operation>`

Executes a request against a URL in the `+https://host_uri/api/Services/service_group_name/service_group_service_name/operation_name+` format.

==== Parameters

[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Parameters a| Object |  Parameters of the operation to execute. |  #[payload] |
| Service Group a| String |  The service group name (first level metadata key). |  | x
| Service Name a| String |  The service name (second level metadata key). |  | x
| Operation a| String |  The operation name (third level metadata key). |  | x
| Target Variable a| String |  The name of a variable in which to store the operation's output. |  |
| Target Value a| String |  An expression that evaluates against the operation's output. The outcome of this expression is stored in the target variable. | #[payload] |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output

[%autowidth.spread]
|===
|Type |Object
|===

==== For Configurations

* <<dynamics-365-for-operations>>

==== Throws

* DYNAMICS365FOROPERATIONS:INVALID_CREDENTIALS
* DYNAMICS365FOROPERATIONS:INVALID_CONNECTION
* DYNAMICS365FOROPERATIONS:LOGIN_FAILED
* DYNAMICS365FOROPERATIONS:TIMEOUT
* DYNAMICS365FOROPERATIONS:INVALID_INPUT
* DYNAMICS365FOROPERATIONS:CONNECTIVITY
* DYNAMICS365FOROPERATIONS:NOT_FOUND
* DYNAMICS365FOROPERATIONS:UNKNOWN
* DYNAMICS365FOROPERATIONS:RETRY_EXHAUSTED

[[importDataRecurringJob]]
=== Import Data Recurring Job

`<dynamics365ForOperations:import-data-recurring-job>`

Facilitates submitting data to recurring data jobs.

==== Parameters

[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Uri Path a| String |  Import URI, for example: `:/api/connector/enqueue/` |  `api/connector/enqueue/` |
| Activity Id a| String |  Activity ID. |  | x
| Entity Name a| String |  Entity name. |  | x
| File input a| Binary |  Data to submit. |  #[payload] |
| Target Variable a| String |  The name of a variable in which to store the operation's output. |  |
| Target Value a| String |  An expression that evaluates against the operation's output. The outcome of this expression is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |String
|===

==== For Configurations

* <<dynamics-365-for-operations>>

==== Throws

* DYNAMICS365FOROPERATIONS:INVALID_CREDENTIALS
* DYNAMICS365FOROPERATIONS:INVALID_CONNECTION
* DYNAMICS365FOROPERATIONS:LOGIN_FAILED
* DYNAMICS365FOROPERATIONS:TIMEOUT
* DYNAMICS365FOROPERATIONS:INVALID_INPUT
* DYNAMICS365FOROPERATIONS:CONNECTIVITY
* DYNAMICS365FOROPERATIONS:NOT_FOUND
* DYNAMICS365FOROPERATIONS:UNKNOWN
* DYNAMICS365FOROPERATIONS:RETRY_EXHAUSTED

[[retrieveMultiple]]
=== Retrieve Multiple

`<dynamics365ForOperations:retrieve-multiple>`

Retrieve multiple entities by URL.

==== Parameters

[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Data Query URL a| String |  The URL, in ODATA format, to use to retrieve the entities. |  #[payload] |
| Streaming Strategy a| * <<repeatable-in-memory-iterable>>
* <<repeatable-file-store-iterable>>
* <<non-repeatable-iterable>> |  Configure how Mule processes streams with streaming strategies. Repeatable streams are the default behavior. |  |
| Target Variable a| String |  The name of a variable in which to store the operation's output. |  |
| Target Value a| String |  An expression that evaluates against the operation's output. The outcome of this expression is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output

[%autowidth.spread]
|===
|Type |Array of Object
|===

==== For Configurations

* <<dynamics-365-for-operations>>

==== Throws

* DYNAMICS365FOROPERATIONS:INVALID_CREDENTIALS
* DYNAMICS365FOROPERATIONS:INVALID_CONNECTION
* DYNAMICS365FOROPERATIONS:LOGIN_FAILED
* DYNAMICS365FOROPERATIONS:TIMEOUT
* DYNAMICS365FOROPERATIONS:INVALID_INPUT
* DYNAMICS365FOROPERATIONS:CONNECTIVITY
* DYNAMICS365FOROPERATIONS:NOT_FOUND
* DYNAMICS365FOROPERATIONS:UNKNOWN


[[retrieveMultipleByQuery]]
=== Retrieve Multiple By Query

`<dynamics365ForOperations:retrieve-multiple-by-query>`

Retrieve multiple entities by DSQL query.

==== Parameters

[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| DataSense Query a| String |  The DSQL query to use to retrieve entities. The query is transformed into a URL internally. |  `#[payload]` |
| Streaming Strategy a| * <<repeatable-in-memory-iterable>>
* <<repeatable-file-store-iterable>>
* <<non-repeatable-iterable>> |  Configure how Mule processes streams with streaming strategies. Repeatable streams are the default behavior. |  |
| Target Variable a| String |  The name of a variable in which to store the operation's output. |  |
| Target Value a| String |  An expression that evaluates against the operation's output. The outcome of this expression is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===

==== Output

[%autowidth.spread]
|===
|Type |Array of Object
|===

==== For Configurations

* <<dynamics-365-for-operations>>

==== Throws

* DYNAMICS365FOROPERATIONS:INVALID_CREDENTIALS
* DYNAMICS365FOROPERATIONS:INVALID_CONNECTION
* DYNAMICS365FOROPERATIONS:LOGIN_FAILED
* DYNAMICS365FOROPERATIONS:TIMEOUT
* DYNAMICS365FOROPERATIONS:INVALID_INPUT
* DYNAMICS365FOROPERATIONS:CONNECTIVITY
* DYNAMICS365FOROPERATIONS:NOT_FOUND
* DYNAMICS365FOROPERATIONS:UNKNOWN


[[unauthorize]]
=== Unauthorize

`<dynamics365ForOperations:unauthorize>`

Deletes all of the access token information of a given resource owner ID so that it's impossible to execute any operation for that user without repeating the authorization dance.

==== Parameters

[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Resource Owner Id a| String |  The ID of the resource owner to invalidate access. |  |
|===


==== For Configurations

* <<dynamics-365-for-operations>>

== Types

[[Tls]]
=== TLS

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|======================
| Field | Type | Description | Default Value | Required
| Enabled Protocols a| String | A comma separated list of protocols enabled for this context. |  | 
| Enabled Cipher Suites a| String | A comma separated list of cipher suites enabled for this context. |  | 
| Trust Store a| <<TrustStore>> |  |  | 
| Key Store a| <<KeyStore>> |  |  | 
| Revocation Check a| * <<standard-revocation-check>>
* <<custom-ocsp-responder>>
* <<crl-file>> |  |  | 
|======================

[[TrustStore]]
=== Trust Store

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|======================
| Field | Type | Description | Default Value | Required
| Path a| String | The location (which will be resolved relative to the current classpath and file system, if possible) of the trust store. |  | 
| Password a| String | The password used to protect the trust store. |  | 
| Type a| String | The type of store used. |  | 
| Algorithm a| String | The algorithm used by the trust store. |  | 
| Insecure a| Boolean | If true, no certificate validations will be performed, rendering connections vulnerable to attacks. Use at your own risk. |  | 
|======================

[[KeyStore]]
=== Key Store

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|======================
| Field | Type | Description | Default Value | Required
| Path a| String | The location (which will be resolved relative to the current classpath and file system, if possible) of the key store. |  | 
| Type a| String | The type of store used. |  | 
| Alias a| String | When the key store contains many private keys, this attribute indicates the alias of the key that should be used. If not defined, the first key in the file will be used by default. |  | 
| Key Password a| String | The password used to protect the private key. |  | 
| Password a| String | The password used to protect the key store. |  | 
| Algorithm a| String | The algorithm used by the key store. |  | 
|======================

[[standard-revocation-check]]
=== Standard Revocation Check

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|======================
| Field | Type | Description | Default Value | Required
| Only End Entities a| Boolean | Only verify the last element of the certificate chain. |  | 
| Prefer Crls a| Boolean | Try CRL instead of OCSP first. |  | 
| No Fallback a| Boolean | Do not use the secondary checking method (the one not selected before). |  | 
| Soft Fail a| Boolean | Avoid verification failure when the revocation server can not be reached or is busy. |  | 
|======================

[[custom-ocsp-responder]]
=== Custom Ocsp Responder

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|======================
| Field | Type | Description | Default Value | Required
| Url a| String | The URL of the OCSP responder. |  | 
| Cert Alias a| String | Alias of the signing certificate for the OCSP response (must be in the trust store), if present. |  | 
|======================

[[crl-file]]
=== Crl File

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|======================
| Field | Type | Description | Default Value | Required
| Path a| String | The path to the CRL file. |  | 
|======================
[[Reconnection]]
=== Reconnection

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Fails Deployment a| Boolean | When the app is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> | The reconnection strategy to use. |  |
|===

[[reconnect]]
=== Reconnect

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often to reconnect (in milliseconds). | |
| Count a| Number | The number of reconnection attempts to make. | |
| blocking |Boolean |If false, the reconnection strategy runs in a separate, non-blocking thread. |true |
|===

[[reconnect-forever]]
=== Reconnect Forever

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often in milliseconds to reconnect. | |
| blocking |Boolean |If false, the reconnection strategy runs in a separate, non-blocking thread. |true |
|===

[[ExpirationPolicy]]
=== Expiration Policy

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Max Idle Time a| Number | A scalar time value for the maximum amount of time a dynamic configuration instance should be allowed to be idle before it's considered eligible for expiration. |  |
| Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | A time unit that qualifies the *Max Idle Time* attribute. |  |
|===

[[repeatable-in-memory-iterable]]
=== Repeatable In Memory Iterable

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Initial Buffer Size a| Number | The number of instances to initially keep in memory to consume the stream and provide random access to it. If the stream contains more data than can fit into this buffer, then the buffer expands according to the *Buffer Size Increment* attribute, with an upper limit of maxInMemorySize. Default value is 100 instances. |  |
| Buffer Size Increment a| Number | This is by how much the buffer size expands if it exceeds its initial size. Setting a value of zero or lower means that the buffer should not expand, and that a STREAM_MAXIMUM_SIZE_EXCEEDED error is raised when the buffer gets full. Default value is 100 instances. |  |
| Max Buffer Size a| Number | The maximum amount of memory to use. If more than that is used then a STREAM_MAXIMUM_SIZE_EXCEEDED error is raised. A value less than or equal to zero means no limit. |  |
|===

[[repeatable-file-store-iterable]]
=== Repeatable File Store Iterable

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Max In Memory Size a| Number | The maximum number of instances to keep in memory. If more than that is required, then it will start to buffer the content on disk. |  |
| Buffer Unit a| Enumeration, one of:

** BYTE
** KB
** MB
** GB | The unit in which *Max In Memory Size* is expressed. |  |
|===

== See Also

https://help.mulesoft.com[MuleSoft Help Center]
